--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "Baymax",
   "version": "0.0.1",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -10,8 +11,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
+    "lottie-react-native": "^6.7.2",
     "react": "18.3.1",
-    "react-native": "0.75.2"
+    "react-native": "0.75.2",
+    "react-native-gesture-handler": "^2.19.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.1",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.6.0",
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
